@@ -41,12 +41,14 @@
 #iso_ajaxOverlay {
 	width:100%;
 	height:100%;
-	position:absolute;
+	position:fixed;
 	top:0;
 	left:0;
 	background-color:#000;
-	-moz-opacity:.3;
-	opacity:.3;
+	-moz-opacity:0.5;
+	opacity:0.3;
+	_display:none;
+	filter:Alpha(opacity=50);
 }
 
 .mod_iso_addressbook ul {
